# VectorShift-Integration-System

./: .gitignore  README.md  redis.conf
backend/: pyproject.toml  requirements.txt
backend/integrations/: airtable.py  hubspot.py  notion.py
frontend/src/: data-form.js
frontend/src/integrations/: hubspot.js
