[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Akash",email = "akashkallai27@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pyzmq (>=26.4.0,<27.0.0)",
    "cryptography (>=45.0.4,<46.0.0)",
    "pymongocrypt (>=1.14.1,<2.0.0)",
    "cachetools (<6.0)",
    "google-auth (>=2.40.3,<3.0.0)",
    "starlette (<0.47.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "marshmallow (<4.0.0)",
    "dataclasses-json (>=0.6.7,<0.7.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "requests (>=2.32.4,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "redis (>=6.2.0,<7.0.0)",
    "kombu (>=5.5.4,<6.0.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
